Changes for File-chdir

{{ $NEXT }}

0.1006    2011-11-02 18:11:13 America/New_York

    - Handle directories with newlines [rt.cpan.org #72114]

0.1005    2011-11-02 14:21:27 America/New_York

    - Fixed rt.cpan.org #53064 [Michael Schwern]

    - Removes bundled Test::More

    - Converted distribution builder to Dist::Zilla

0.1004 Wed Jun  9 14:14:54 EDT 2010

    - Build.Pl and Makefile.PL will bail out on Perl 5.13.1, which
      accidentally broke File::chdir

0.1003 Tue Apr 27 21:21:32 EDT 2010

    - testfix: remove -T flag in tests

0.1002 Mon Feb 11 19:47:46 EST 2008

    - testfix: 0.1001 accidentally left many array tests commented out

0.1001 Sat Feb  9 13:07:05 EST 2008

    - testfix: work around odd Test::Builder errors on perl 5.6.2 dying in
      the middle of a "push"

0.10 Fri Feb  8 08:42:53 EST 2008
    - File::Spec 3.2501 broke File::chdir on Win32; updated prerequisite to
      latest File::Spec (3.27) and rewrote internals of File::chdir
    - Split array deletion tests to separate file to skip on Perl < 5.006
    - Added Build.PL and other files (e.g. INSTALL, LICENSE) to the tarball
    - Minor documentation changes/additions

0.0901
    - removed unnecessary prototypes on internal functions (perl critic)
    - cosmetic changes to distribution package (README, extra tests in xt)

0.09 Mon Jul 30 09:50:28 EDT 2007
    - Updated Makefile.PL to warn about API change in 0.08
    - Added $! diagnostic to error messages

0.08 Thu Jun 21 20:56:50 EDT 2007
    * Croaks if the chdir fails when changing $CWD or @CWD
    * Deleting from end of @CWD acts like a pop
    - Revised and expanded @CWD tests
    - Revised delete error message for deleting from middle of @CWD
    - Added DIAGNOSTICS section to documentation

0.07 Mon Jun 18 18:38:00 EDT 2007
    - Fixed testfile bug that prepended "/" in tests on Cygwin

0.06_01 Mon Apr  9 05:17:02 EDT 2007
    - Development release by David Golden
    * Fixed bug that prepended "/" to $CWD for Win32